添加部分命令